<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nicholas.pathfinderapp.GenerateRouteActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageButton
            android:id="@+id/image_button"
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/ic_launcher" />

        <!--<Switch
            android:id="@+id/kmMile_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Kilometers/Miles" />-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <Button
                android:id="@+id/kilometers_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="Kilometers"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/miles_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/colorAccent"
                android:text="Miles"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/pickDistanceDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/pickDistance" />

            <!--<Button
                android:id="@+id/smallRun_buttonKM"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/OneToFiveKM"
                android:textColor="@android:color/white"
                android:textStyle="bold" />-->

            <Button
                android:id="@+id/smallRun_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/OneToFiveMiles"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <!--<Button
                android:id="@+id/mediumRun_buttonKM"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:background="@color/colorPrimaryDark"
                android:text="@string/SixToNineteenKM"
                android:textColor="@android:color/white"
                android:textStyle="bold" />-->

            <Button
                android:id="@+id/mediumRun_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:background="@color/colorPrimaryDark"
                android:text="@string/SixToFifteenMiles"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Chronometer
                android:id="@+id/stop_watch"
                style="?android:textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="50dp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/start_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_start"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/stop_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_stop"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>