<resources>
    <string name="app_name">PathfinderApp</string>

    <!-- Strings related to login

    <string name="action_sign_in_short">Sign in</string>
    -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to firebase -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_mainMenu">Main Menu</string>
    <!-- Strings needed for main menu -->
    <string name="btn_profile">Profile</string>
    <string name="btn_GenRoute">Generate Route</string>
    <string name="btn_setting">Settings</string>
    <string name="btn_history">History</string>

    <!-- Strings for Generate Route -->
    <string name="btn_start">Start Run</string>
    <string name="btn_stop">Stop and Save</string>
    <string name="pickDistance">Please pick a distance range below.</string>
    <string name="OneToFiveMiles">1 to 5 miles</string>
    <string name="SixToFifteenMiles">6 to 15 miles</string>
    <string name="OneToEightKM">1.61 to 8.05 km</string>
    <string name="NineToTwentyFourKM">9.66 to 24.14 km</string>
    <string name="btn_refresh">Refresh</string>
    <string name="selectShortRun">You selected a short run!</string>
    <string name="selectMediumRun">You selected a medium run!</string>
</resources>
